cmake_minimum_required(VERSION 2.8)
PROJECT(HELLO)

MESSAGE(STATUS "BINARY dir is" ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "SOURCE dir is" ${PROJECT_SOURCE_DIR})

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

ADD_SUBDIRECTORY(src)

SET(CMAKE_INSTALL_PREFIX /tmp/heaven/t2)
INSTALL(FILES COPYRIGHT README DESTINATION share/doc/t2)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION bin)


